# rl_robotic

./: README.md
ANYmal_simulation/: README.md
ANYmal_simulation/src/anymal_controller/: CMakeLists.txt  package.xml
ANYmal_simulation/src/anymal_controller/config/: controllers.yaml
ANYmal_simulation/src/anymal_controller/launch/: anymal_controller.launch
ANYmal_simulation/src/anymal_joystick/: CMakeLists.txt  package.xml
ANYmal_simulation/src/anymal_joystick/launch/: joystick_control.launch
ANYmal_simulation/src/anymal_simulator/: CMakeLists.txt  package.xml
ANYmal_simulation/src/anymal_simulator/launch/: anymal_simulation.launch  gazebo.launch
micro_chess/: README.md  action_encoding.py  human_vs_ai.py  micro_chess_env.py  models.py  train_agent.py
micro_chess/old_environments/: environment.py  gui_game.py  play.py  terminal_game.py
quadruped_analysis/: CMakeLists.txt  README.md  package.xml
quadruped_analysis/launch/: simulation.launch
quadruped_analysis/scripts/: gait_analysis_subscriber.py  quadruped_simulation.py
shut_the_box/: README.md
turtlesim_drawer/: CMakeLists.txt  README.md  package.xml
turtlesim_drawer/config/: shapes.yaml
turtlesim_drawer/launch/: draw_shapes.launch  teleop_keyboard.launch
turtlesim_drawer/scripts/: draw_shapes.py  teleop_keyboard.py
