<?xml version="1.0"?>
<package format="2">
  <name>turtlesim_drawer</name>
  <version>0.0.1</version>
  <description>The turtlesim_drawer package</description>

  <maintainer email="a.noghabi2002@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- ROS dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>turtlesim</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
