<?xml version="1.0"?>
<package format="2">
  <name>anymal_controller</name>
  <version>1.0.0</version>
  <description>Control package for ANYmal robot</description>

  <maintainer email="a.noghabi2002@gmail.com">Ali Noghabi</maintainer>
  <license>noghabi</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>effort_controllers</depend>
  <depend>anymal_b_simple_description</depend>

  <export>
  </export>
</package>
