<?xml version="1.0"?>
<package format="2">
  <name>anymal_joystick</name>
  <version>1.0.0</version>
  <description>Joystick control package for ANYmal robot</description>

  <maintainer email="a.noghabi2002@gmail.com">Ali Noghabi</maintainer>
  <license>noghabi</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>joy</depend>
  <depend>anymal_controller</depend>

  <export>
  </export>
</package>
