<?xml version="1.0"?>
<package format="2">
  <name>anymal_simulator</name>
  <version>1.0.0</version>
  <description>Simulation package for ANYmal</description>

  <maintainer email="a.noghabi2002@gmail.com">Ali Noghabi</maintainer>

  <license>noghabi</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>
  <depend>controller_manager</depend>
  <depend>anymal_b_simple_description</depend>

  <export>
  </export>
</package>
